Bug 105701 - KMail crashed while writing a mail
Summary: KMail crashed while writing a mail
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.8
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 97144 105702 105703 106435 116526 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-05-15 12:38 UTC by Oliver Zimmermann
Modified: 2007-09-14 12:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Zimmermann 2005-05-15 12:38:31 UTC
Version:           1.8 (using KDE 3.4.0 Level "b" , SUSE 9.2 UNSUPPORTED)
Compiler:          gcc version 3.3.4 (pre 3.3.5 20040809)
OS:                Linux (i686) release 2.6.8-24.14-smp

KMail crashed while writing a mail. The backtrace is:

Using host libthread_db library "/lib/tls/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 1112619328 (LWP 22535)]
[KCrash handler]
#7  0x41c17ae0 in QObject::receivers () from /usr/lib/qt3/lib/libqt-mt.so.3
#8  0x40bc514b in KPIM::ProgressItem::progressItemProgress ()
   from /opt/kde3/lib/libkdepim.so.1
#9  0x40bc521b in KPIM::ProgressItem::setProgress ()
   from /opt/kde3/lib/libkdepim.so.1
#10 0x40464b2f in KMAcctExpPop::slotJobFinished ()
   from /opt/kde3/lib/libkmailprivate.so
#11 0x40465cc8 in KMAcctExpPop::slotResult ()
   from /opt/kde3/lib/libkmailprivate.so
#12 0x40465f04 in KMAcctExpPop::qt_invoke ()
   from /opt/kde3/lib/libkmailprivate.so
#13 0x41c1831e in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#14 0x41180452 in KIO::Job::result () from /opt/kde3/lib/libkio.so.4
#15 0x411dea5c in KIO::Job::emitResult () from /opt/kde3/lib/libkio.so.4
#16 0x411e60ac in KIO::SimpleJob::slotFinished ()
   from /opt/kde3/lib/libkio.so.4
#17 0x411e685a in KIO::TransferJob::slotFinished ()
   from /opt/kde3/lib/libkio.so.4
#18 0x411d3887 in KIO::TransferJob::qt_invoke () from /opt/kde3/lib/libkio.so.4
#19 0x41c1831e in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#20 0x41c18ac6 in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#21 0x41185c8c in KIO::SlaveInterface::finished ()
   from /opt/kde3/lib/libkio.so.4
#22 0x411b9838 in KIO::SlaveInterface::dispatch ()
   from /opt/kde3/lib/libkio.so.4
#23 0x41194773 in KIO::SlaveInterface::dispatch ()
   from /opt/kde3/lib/libkio.so.4
#24 0x4119596b in KIO::Slave::gotInput () from /opt/kde3/lib/libkio.so.4
#25 0x411bcc5a in KIO::Slave::qt_invoke () from /opt/kde3/lib/libkio.so.4
#26 0x41c1831e in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#27 0x41c1894d in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#28 0x41f6af30 in QSocketNotifier::activated ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#29 0x41c37f90 in QSocketNotifier::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#30 0x41bb5baf in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#31 0x41bb7773 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#32 0x418416d1 in KApplication::notify () from /opt/kde3/lib/libkdecore.so.4
#33 0x41ba9d26 in QEventLoop::activateSocketNotifiers ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#34 0x41b63112 in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#35 0x41bcdb41 in QEventLoop::enterLoop () from /usr/lib/qt3/lib/libqt-mt.so.3
#36 0x41bcd986 in QEventLoop::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#37 0x41bb763f in QApplication::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#38 0x0804a9f6 in main ()
Comment 1 Carsten Burghardt 2005-05-15 12:45:03 UTC
*** Bug 105702 has been marked as a duplicate of this bug. ***
Comment 2 Carsten Burghardt 2005-05-15 13:02:46 UTC
We either need a way to reproduce this or a backtrace from a kmail compiled with --enable-debug=full. Otherwise there is nothing we can do, sorry.
Comment 3 Carsten Burghardt 2005-05-15 13:07:13 UTC
*** Bug 105703 has been marked as a duplicate of this bug. ***
Comment 4 Andreas Kling 2006-07-31 13:57:51 UTC
*** Bug 106435 has been marked as a duplicate of this bug. ***
Comment 5 Andreas Kling 2006-07-31 14:00:44 UTC
*** Bug 97144 has been marked as a duplicate of this bug. ***
Comment 6 Andreas Kling 2006-07-31 14:00:51 UTC
*** Bug 116526 has been marked as a duplicate of this bug. ***
Comment 7 Andreas Kling 2006-09-17 19:50:49 UTC
SVN commit 585670 by kling:

Use a QGuardedPtr for the KPIM::ProgressItem in KMAccount.
Fixes a bazillion crashes when dereferencing deleted items.

BUG: 105701
BUG: 114953
BUG: 114197
BUG: 117475
BUG: 118083
BUG: 128131
BUG: 129007
BUG: 133023
BUG: 133745


 M  +1 -1      kmaccount.h  


--- branches/KDE/3.5/kdepim/kmail/kmaccount.h #585669:585670
@@ -309,7 +309,7 @@
   QValueList<KMMessage*> mReceipts;
   QPtrList<FolderJob>  mJobList;
   bool mHasInbox : 1;
-  ProgressItem *mMailCheckProgressItem;
+  QGuardedPtr<ProgressItem> mMailCheckProgressItem;
 
 private:
     /**