Use a QGuardedPtr for the KPIM::ProgressItem in KMAccount. Fixes a bazillion crashes when dereferencing deleted items.

BUG: 105701
BUG: 114953
BUG: 114197
BUG: 117475
BUG: 118083
BUG: 128131
BUG: 129007
BUG: 133023
BUG: 133745

svn path=/branches/KDE/3.5/kdepim/; revision=585670